<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.coolstuff.ecommerce.grab</groupId>
    <artifactId>grab</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>grab</name>
    <description>Ecommerce</description>

    <modules>
        <module>framework</module>
        <module>logger-slf4j</module>
        <module>storage-adapter-s3</module>
        <module>outbox-infrastructure</module>
        <module>workflow-infrastructure</module>
        <module>catalog-domain</module>
        <module>catalog-application</module>
        <module>catalog-adapter-persistence</module>
        <module>inventory-domain</module>
        <module>inventory-application</module>
        <module>inventory-adapter-persistence</module>
        <module>identity-domain</module>
        <module>identity-application</module>
        <module>identity-adapter-persistence</module>
        <module>merchant-domain</module>
        <module>merchant-application</module>
        <module>merchant-adapter-persistence</module>
        <module>pricing-domain</module>
        <module>pricing-application</module>
        <module>pricing-adapter-persistence</module>
        <module>sales-channel-domain</module>
        <module>sales-channel-application</module>
        <module>sales-channel-adapter-persistence</module>
        <module>storefront-query-infrastructure</module>
        <module>cart-domain</module>
        <module>cart-adapter-persistence</module>
        <module>store</module>
    </modules>

    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer>
            <id>khinemyaezin</id>
            <name>Khine Myae Zin</name>
            <email>hello@khinemyaezin.com</email>
        </developer>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.3.4</spring-boot.version>
        <spring-modulith.version>1.2.4</spring-modulith.version>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <lombok.version>1.18.38</lombok.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <junit-jupiter-api.version>5.10.2</junit-jupiter-api.version>
        <khinemyaezin.nested-set.version>1.1.0</khinemyaezin.nested-set.version>
        <joda-money.version>2.0.0</joda-money.version>
        <mockito-core.version>5.4.0</mockito-core.version>
        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
        <jjwt.version>0.12.5</jjwt.version>
        <aws-sdk.version>2.29.45</aws-sdk.version>
        <testcontainer.version>1.20.3</testcontainer.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.modulith</groupId>
                <artifactId>spring-modulith-bom</artifactId>
                <version>${spring-modulith.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>${lombok-mapstruct-binding.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter-api.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.joda</groupId>
                <artifactId>joda-money</artifactId>
                <version>${joda-money.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.khinemyaezin.nested-set</groupId>
                <artifactId>nested-set-library</artifactId>
                <version>${khinemyaezin.nested-set.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.khinemyaezin.nested-set</groupId>
                <artifactId>nested-set</artifactId>
                <version>${khinemyaezin.nested-set.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainer.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source> 
                    <target>21</target> 
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <!-- other annotation processors -->
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Amapstruct.defaultComponentModel=spring</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
